# Lease-Companion

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BC_HANDOFF.md  BC_JOINT_REPLY.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements-minimum-mvp.txt  진행순서_역할분담_공유.md
ai/: AGENTS.md  README.md  __init__.py  pyproject.toml
ai/prompts/: special_clause_guidance_v1.txt
ai/prompts/checklists/: v1.txt  v2.txt
ai/prompts/classification/: v1.txt
ai/prompts/extraction/: contract_fields.txt  registry_fields.txt
ai/prompts/questions/: v1.txt  v2.txt
ai/prompts/simulation/: dialogue-v1.txt  v1.txt
ai/prompts/summaries/: v1.txt  v2.txt
ai/src/lease_companion_ai/: __init__.py
ai/tests/: __init__.py  conftest.py
ai/tests/classification/: __init__.py  test_builder.py  test_service.py
ai/tests/evaluation/: test_offline.py  test_retrieval_evaluation.py
ai/tests/extraction/: test_local_fallback_j_fields.py
ai/tests/generation/: test_gemini_generation_case001_smoke.py  test_generation_service.py  test_openai_case001_smoke.py
ai/tests/guardrails/: test_guardrail_service.py  test_pii.py
ai/tests/pipelines/: __init__.py  test_classified_analysis.py  test_gemini_vlm.py  test_minimum_mvp.py  test_pdf_document.py  test_special_clause_flow.py
ai/tests/providers/: __init__.py  test_classification_provider.py  test_gemini_gateway.py  test_gemini_generation.py  test_gemini_practice.py  test_gemini_practice_dialogue.py  test_gemini_practice_smoke.py  test_gemini_schema.py  test_openai_generation.py  test_protocols.py  test_sdk_adapters.py
ai/tests/rag/: __init__.py  conftest.py  test_bm25.py  test_chroma_index.py  test_chunking.py  test_clause_retrieval.py  test_evidence_enrichment.py  test_hybrid_retrieval.py  test_law_source_collector.py  test_models.py  test_reranking.py  test_runtime_factory.py  test_source_contract.py  test_source_manifest.py
ai/tests/risk_patterns/: test_damage_patterns.py
ai/tests/routing/: __init__.py  test_routing_service.py
ai/tests/rules/: test_classification_judgments.py  test_judgments_j13.py
ai/tests/schemas/: test_adapters.py  test_case001_fixture.py  test_classification.py  test_judgment_goldset.py  test_simulation.py  test_unified.py
ai/tests/simulation/: test_dialogue_guardrail.py  test_dialogue_planner.py  test_evaluation.py  test_rules.py  test_state_machine.py
ai/tests/special_clauses/: test_catalog_contract.py  test_catalog_matching.py  test_evaluation_fixtures.py
ai/training/: README.md
backend/: .env.example  AGENTS.md  README.md  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7adac2280b55_baseline_기존_영속_모델_전체.py  c8b3bd1c03c6_analysis_runs에_classification_result_.py  d4e5f6a7b8c9_add_practice_sessions_and_turns.py  e5f6a7b8c9d0_add_practice_media_jobs.py  f6a7b8c9d0e1_add_practice_dialogue_generation_payload.py
backend/app/: __init__.py  main.py  mvp_app.py
backend/app/core/: README.md  db.py  errors.py  security.py
backend/app/models/: README.md  analysis.py  checklist.py  contract.py  document.py  feedback.py  practice.py  user.py
backend/app/repositories/: README.md
backend/app/schemas/: README.md  analysis.py  auth.py  checklist.py  contract.py  document.py  feedback.py  minimum_mvp.py  practice.py
backend/app/services/: README.md  minimum_mvp.py  practice.py  practice_media.py
backend/app/static/: app.js  index.html  styles.css
backend/app/workers/: README.md  analysis.py  practice_media.py
backend/scripts/: export_openapi.py  seed_dev.py
backend/tests/: __init__.py  conftest.py  test_analysis_log_summaries.py  test_seed_dev.py
backend/tests/api/: __init__.py  test_analyses.py  test_auth.py  test_case001_e2e.py  test_checklists.py  test_contracts.py  test_documents.py  test_feedback.py  test_minimum_mvp.py  test_practice.py
backend/tests/workers/: test_practice_media.py  test_stale_runs.py
data/: AGENTS.md  CLAUDE.md  (+3 more)
(+512 files in other folders)
