[project]
name = "lease-companion-ai"
version = "0.0.0"
description = "슬기로운 계약생활 AI 처리 계층 (추출·정규화·규칙·RAG·생성·guardrail)"
requires-python = ">=3.10,<3.11"
# 최소 MVP 실사용 의존성 (2026-07-14 선정표 기준).
dependencies = [
    "chromadb>=1.5,<2",
    "cohere>=7,<8",
    "PyMuPDF>=1.24,<2",
    "google-genai>=2,<3",
    "openai>=2.45,<3",
    "pydantic>=2,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# 저장소 루트 pyproject.toml의 Ruff·Mypy 설정과 pytest 회귀 검증을 공통 사용한다.
