[project]
name = "lease-companion-backend"
version = "0.0.0"
description = "슬기로운 계약생활 API 서버 (FastAPI)"
requires-python = ">=3.10,<3.11"
# FastAPI 사용 확정. DB는 PostgreSQL + SQLAlchemy 확정 (2026-07-16 팀 합의).
# 그 외 라이브러리는 미확정이므로 임의 추가하지 않는다.
dependencies = [
    "fastapi",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# TODO: ASGI 서버(uvicorn), 파일 검증, 린터·포매터·테스트 도구 확정 후 추가.
# TODO: 인증 라이브러리(JWT·bcrypt 구현체) 확정 후 추가.
