[project]
name = "lease-companion-backend"
version = "0.0.0"
description = "슬기로운 계약생활 API 서버 (FastAPI)"
requires-python = ">=3.10,<3.11"
# FastAPI 사용 확정. DB는 PostgreSQL + SQLAlchemy 확정 (2026-07-16 팀 합의).
# 그 외 라이브러리는 미확정이므로 임의 추가하지 않는다.
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "python-dotenv",
    "pyjwt",
    "passlib",
    # passlib 1.7.4가 bcrypt 4.1+의 제거된 버전 속성을 읽어 경고·오류를 내므로 고정
    "bcrypt<4.1",
    "email-validator",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# 파일 검증은 ai/ingestion 단일 원본을 재사용하고, 저장소 루트 Ruff·Mypy 설정과 pytest를 공통 사용한다.
# DB PostgreSQL·인증 JWT Bearer+bcrypt 계열 확정(2026-07-16 ADR).
# 인증 구체 라이브러리 확정(2026-07-16 팀): PyJWT + Passlib-bcrypt.
